--- a/spryker.pre-commit.sample
+++ b/spryker.pre-commit.sample
@@ -1,4 +1,4 @@
-#!/bin/sh
+!/bin/sh
 #
 # An example hook script to verify what is about to be committed.
 # Called by "git commit" with no arguments.  The hook should
@@ -12,10 +12,10 @@ docker/sdk console c:s:s -f;
 
 echo "=================== Checking non-fixable code styling ===============";
 docker/sdk console c:s:s;
- 
+
 echo "=================== PHP MD ===============";
 docker/sdk cli vendor/bin/phpmd src/ text vendor/spryker/architecture-sniffer/src/ruleset.xml --minimumpriority 2
-  
+
  echo "=================== PHP Stan ===============";
  docker/sdk cli vendor/bin/phpstan analyze -l 4 -c phpstan.neon src/ --debug;
 
@@ -59,4 +59,3 @@ fi
 
 # If there are whitespace errors, print the offending file names and fail.
 exec git diff-index --check --cached $against --
-
