--- a/starship.toml
+++ b/starship.toml
@@ -3,6 +3,7 @@
 
 # Inserts a blank line between shell prompts
 add_newline = true
+command_timeout = 1000
 
 [line_break]
 disabled = false
@@ -10,6 +11,7 @@ disabled = false
 # Replace the "❯" symbol in the prompt with "➜"
 [character] # The name of the module we are configuring is "character"
 success_symbol = "[➜](bold green)" # The "success_symbol" segment is being set to "➜" with the color "bold green"
+error_symbol = "[x](bold red)"
 
 # Disable the package module, hiding it from the prompt completely
 [package]
@@ -48,3 +50,8 @@ disabled = false
 threshold = -1
 symbol = "⚙️"
 style = "bold dimmed green"
+
+[time]
+disabled = false
+format = '🕙 $time ($style)'
+time_format = '%I:%M %P'
