master: Update Makefile.spryker

--- a/Makefile.spryker
+++ b/Makefile.spryker
@@ -27,9 +27,9 @@ reset: ## Performs a full reset for the application
 	make down;
 	$(SDK) clean-data;
 	$(SDK) clean;
+	rm -Rf data/cache/propel && rm -Rf src/Orm/Zed/*/*/Base/ && rm -Rf src/Orm/Zed/*/*/Map/;
 	rm -rf src/Generated;
 	rm -rf vendor;
-	rm -rf node_modules;
 	make up;
 
 destructive: ## Run destructive deployment ex: make destructive region=US
